--- a/podcast.html
+++ b/podcast.html
@@ -41,7 +41,7 @@
 						</ul>
 
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/oeadefisan" class="icon brands fa-linkedin"><span class="label">linkedin<span></a></li>
+							<li><a href="https://www.linkedin.com/in/oeadefisan" class="icon brands fa-linkedin"><span class="label">linkedin<span></a></li>
 							<li><a href="https://www.instagram.com/oe_adefisan" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/FisanUJI" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://x.com/oeadefisan" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
