--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Oluwatobi Adefisan <br/>
 						Portfolio</h1>
-						<p>Data Analyst well versed in SQL, Tableau, and Python <a href="https://github.com/FisanUJI">@FisanUJI</a></p>
+						<p>Data Analyst experienced in SQL, Tableau, and Python for data analysis <a href="https://github.com/FisanUJI">@FisanUJI</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
