--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Fiz Geospatial by Oluwatobi Adefisan
+	Data Analytics Portfolio by Oluwatobi Adefisan
 	fizgeospatial.com | @fisanUJI
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
