--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html"> Projects</a></li>
+							<li><a href="posts.html">Posts</a></li>
+							<li><a href="podcast.html">Podcast</a></li>
 							<!-- 
 							<li><a href="posts.html">Posts</a></li>
 							<li><a href="podcast.html">Podcast</a></li>
@@ -218,3 +220,4 @@
 
 	</body>
 </html>
+
