--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<div id="intro">
 						<h1>Oluwatobi Adefisan <br/>
 						Portfolio</h1>
-						<p>Data Analyst experienced in SQL, Tableau, and Python for data analysis <a href="https://github.com/FisanUJI">@FisanUJI</a></p>
+						<p>Geospatial Data Analyst experienced in SQL, Tableau, Story-telling and Python for data analysis <a href="https://github.com/FisanUJI">@FisanUJI</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -35,7 +35,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html"> Projects</a></li>
-							<li><a href="posts.html">Posts</a></li>
+							<li><a href="recent-posts.html">Posts</a></li>
 							<!-- 
 							<li><a href="posts.html">Posts</a></li>
 							<li><a href="podcast.html">Podcast</a></li>
