Changes to recent-post.html. Added the download link for the project below the page and the download link for the survey.

--- a/recent-posts.html
+++ b/recent-posts.html
@@ -112,6 +112,32 @@
 								<p>
 									The apps were designed to be scalable and flexible, allowing for future updates and enhancements as needed. The use of GIS architecture allows for the integration of spatial data, which can help improve the accuracy and relevance of the information provided by users. The project and apps were built using a combination of software tools, including ArcGIS Pro, ArcGIS storymaps, ArcGIS Experience builder, Web map and Survey 123, to provide a robust and reliable platform for users. Overall, <i>the Castellon Tourist-service Facilities Program</i> is an innovative project that leverages technology to promote tourism in Castellon de la Plana. The CT App and the CT Management App are powerful tools that can help attract more tourists to the area and showcase the unique tourism potential of Castellon. For more information about this project, please visit this <a href="https://storymaps.arcgis.com/stories/e6b87e5fef704e8e950c536ffe6e4437"><b>link</b></a> for the <a href="https://storymaps.arcgis.com/stories/e6b87e5fef704e8e950c536ffe6e4437">ArcGIS storymap</a> version of this project.
 								</p>
+								<div class="box alt">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-6">
+												<span class="image fit">
+													<figure>
+														<img src="/images/tourist-service-fascilities-project.jpg" />
+														<figcaption style="text-align: left;">Figure 4: The Tourist Service Facilities Project.</figcaption>
+													</figure>	
+													<ul class="actions" style="display: flex; justify-content: left;">
+														<li><a href="https://storymaps.arcgis.com/stories/e6b87e5fef704e8e950c536ffe6e4437/print" class="button icon solid fa-download">Download Project</a></li>
+													</ul>													
+												</span>
+											</div>
+											<div class="col-6">
+												<span class="image fit">
+													<figure>
+														<img src="/images/tourist-service-fascilities-survey.jpg" />
+														<figcaption style="text-align: left;">Figure 5: The Tourist Service Facilities Tool.</figcaption>
+													</figure>	
+													<ul class="actions" style="display: flex; justify-content: right;">
+														<li><a href="https://survey123.arcgis.com/share/2cd05a5cff1e496683188b6f0f55ed99?portalUrl=https://uji.maps.arcgis.com" class="button icon solid fa-download">Download Tool</a></li>
+													</ul>
+												</span>
+											</div>
+										</div>
+								</div>
 									
 							</section>
 
