--- a/previous-posts.html
+++ b/previous-posts.html
@@ -119,7 +119,7 @@
 											<div class="col-6">
 												<span class="image fit">
 													<figure>
-														<img src="/images/flood-susceptibility-project.jpg" alt="The Castellon Tourism Registration App" />
+														<img src="/images/flood-susceptibility-project.jpg" alt="The flood susceptibility project" />
 														<figcaption style="text-align: left;">Figure 4: The Flood Susceptibility Project.</figcaption>
 													</figure>	
 													<ul class="actions" style="display: flex; justify-content: left;">
@@ -130,7 +130,7 @@
 											<div class="col-6">
 												<span class="image fit">
 													<figure>
-														<img src="/images/flood-susceptibility-assessment-map_2.jpg" />
+														<img src="/images/flood-susceptibility-assessment-map_2.jpg" alt="The flood susceptibility assesment map" />
 														<figcaption style="text-align: left;">Figure 5: The Flood Susceptibility Map.</figcaption>
 													</figure>	
 													<ul class="actions" style="display: flex; justify-content: right;">
