--- a/previous-posts.html
+++ b/previous-posts.html
@@ -123,7 +123,7 @@
 														<figcaption style="text-align: left;">Figure 4: The Flood Susceptibility Project.</figcaption>
 													</figure>	
 													<ul class="actions" style="display: flex; justify-content: left;">
-														<li><a href="https://storymaps.arcgis.com/stories/d802e30453bd433eaa5305b946f7c60b/print" class="button icon solid fa-download">Download Project</a></li>
+														<li><a href="https://storymaps.arcgis.com/stories/d802e30453bd433eaa5305b946f7c60b/print" class="button icon solid fa-download">Download</a></li>
 													</ul>													
 												</span>
 											</div>
