--- a/2/un-mappers-streetlights-mapping.html
+++ b/2/un-mappers-streetlights-mapping.html
@@ -62,16 +62,16 @@
 								<div class="image main">
 									<figure>
 										<img src="images/lokoja-2022-flooding-aerial-photo.jpg" alt="" />
-										<figcaption>Figure 1: Aerial photo of the October 2022 flooding in Lokoja, Nigeria. &ensp;  PHOTO CREDIT: Obinna Nwosu</figcaption>
+										<figcaption>Data Enumerators & Team &ensp;  PHOTO CREDIT: UN Maps</figcaption>
 									</figure>
 								</div>
-								<h3>Introduction</h3>
+								<h3>About UN Maps</h3>
 								<p> 
-									Flooding is a natural disaster that can cause significant damage to property and infrastructure, as well as pose a threat to human life. In recent years, there has been an increasing interest in using geospatial technologies to assess flood susceptibility in urban areas. This blog post presents a flood susceptibility mapping project for Lokoja, Nigeria, which was carried out by a group of students from the Erasmus Masters in Geospatial Technologies program at UJI, Castellon de la Plana, Spain. The project aimed to identify areas in Lokoja that are most susceptible to flooding, using a combination of remote sensing data and GIS analysis.
+									UN Maps is a United Nations initiative that leverages geospatial technologies and open data to support humanitarian efforts, peacekeeping missions, and sustainable development. Its goals are deeply aligned with the broader UN mission of fostering global cooperation, safety, and equity.  
 								</p>
 								<h3>Background and Challenges</h3>
 								<p>
-									The 12th of June every year is a day in Nigeria marked for celebration of Democracry. But on this very day, 12th of June 2022, Lokoja, the capital city of Kogi State in Nigeria, experienced a very severe flooding due to heavy rainfall. The flood caused significant damage to property and infrastructure, as well as the loss of lives. The flood was exacerbated by the city's topography, which is characterized by low-lying areas and poor drainage systems. 
+									After a successful completion of the GIS course module, the students... 
 								</p>
 								<p>
 									On the 2nd of October 2022, another heavy rainfall occurred in Lokoja, which led to another flooding event. The flood caused significant damage to property and infrastructure, as well as loss of lives. The flood was again exacerbated by the city's topography and poor drainage systems. The two flooding events highlighted the need for this comprehensive flood susceptibility mapping project to identify areas that are most vulnerable to flooding and to develop strategies to mitigate the impact of future floods.
