--- a/un-mappers-streetlights-mapping.html
+++ b/un-mappers-streetlights-mapping.html
@@ -62,7 +62,7 @@
 								</header>
 								<div class="image main">
 									<figure>
-										<img src="images/lokoja-2022-flooding-aerial-photo.jpg" alt="" />
+										<img src="images/" alt="" />
 										<figcaption>Data Enumerators & Team &ensp;  PHOTO CREDIT: UN Maps</figcaption>
 									</figure>
 								</div>
