--- a/un-mappers-streetlights-mapping.html
+++ b/un-mappers-streetlights-mapping.html
@@ -10,7 +10,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<base href="/data-analytics-portfolio/">
 	</head>
 	<body class="is-preload">
 
@@ -62,7 +61,7 @@
 								</header>
 								<div class="image main">
 									<figure>
-										<img src="images/" alt="" />
+										<img src="images/uji-openstreet-mappers.jpg" alt="" />
 										<figcaption>Data Enumerators & Team &ensp;  PHOTO CREDIT: UN Maps</figcaption>
 									</figure>
 								</div>
