--- a/recent-posts.html
+++ b/recent-posts.html
@@ -63,7 +63,10 @@
 									<img src="images/pic01.jpg" alt="" />
 								</div>
 								<p>
-									The <i>Castellon Tourist Service Facilities Program </i> is a program designed to showcase the tourism potential of Castellon de la Plana, Spain. The project aims to centralize and promote tourism in Castellon using robust software tools and GIS Architecture. The program features software solutions like <i>the CT App</i> and <i>the CT Management App</i> as products for achieving this effort.	<b>The CT App</b>, which is the short for Castellon Tourism Software Application, is a public software application powered by Castellón Tourism Agency (CTA) for registering facilities under the Castellon Tourist Service (CTS) Facilities program. On the other hand, the <b>CT Management App</b>, which is short for Castellon Tourism Management Application, is another Castellón Tourism Agency software application (CTA) used by the Project manager, also known as the Facility Manager, to verify the authenticity of registered tourist facilities. 
+									The <i>Castellon Tourist Service Facilities Program </i> is a program designed to showcase the tourism potential of Castellon de la Plana, Spain. The project aims to centralize and promote tourism in Castellon using robust software tools and GIS Architecture. The program features software solutions like <i>the CT App</i> and <i>the CT Management App</i> as products for achieving this effort.	<br />
+								</p>
+								<p>
+									<b>The CT App</b>, which is the short for Castellon Tourism Software Application, is a public software application powered by Castellón Tourism Agency (CTA) for registering facilities under the Castellon Tourist Service (CTS) Facilities program. On the other hand, the <b>CT Management App</b>, which is short for Castellon Tourism Management Application, is another Castellón Tourism Agency software application (CTA) used by the Project manager, also known as the Facility Manager, to verify the authenticity of registered tourist facilities. 
 								</p>
 								<div class="image main">
 									<figure>
@@ -121,7 +124,7 @@
 														<figcaption style="text-align: left;">Figure 4: The Tourist Service Facilities Project.</figcaption>
 													</figure>	
 													<ul class="actions" style="display: flex; justify-content: left;">
-														<li><a href="https://storymaps.arcgis.com/stories/e6b87e5fef704e8e950c536ffe6e4437/print" class="button icon solid fa-download">Download Project</a></li>
+														<li><a href="https://storymaps.arcgis.com/stories/e6b87e5fef704e8e950c536ffe6e4437/print" class="button icon solid fa-download">Download</a></li>
 													</ul>													
 												</span>
 											</div>
