Update Navigation button

--- a/the-castellon-tourist-service-fascilities-program.html
+++ b/the-castellon-tourist-service-fascilities-program.html
@@ -35,7 +35,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html"> Projects</a></li>
-							<li class="active"><a href="posts.html">Recent posts</a></li>
+							<li class="active"><a href="posts.html">Posts</a></li>
 							<li class="active"><a href="recent-posts.html">Recent posts</a></li>
 							<li><a href="previous-posts.html">Previous posts</a></li>
 						</ul>
