--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html"> Projects</a></li>
-							<li><a href="recent-posts.html">Posts</a></li>
+							<li><a href="posts.html">Posts</a></li>
 							<!-- 
 							<li><a href="posts.html">Posts</a></li>
 							<li><a href="podcast.html">Podcast</a></li>
