--- a/posts.html
+++ b/posts.html
@@ -63,7 +63,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Post</a></li>
+									<li><a href="the-castellon-tourist-service-fascilities-program.html" class="button large">View Post</a></li>
 								</ul>
 							</article>
 
@@ -77,7 +77,7 @@
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>A group project by students of the 2022 Erasmus Masters in Geospatial Technologies, Universitat Jaume I.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Post</a></li>
+										<li><a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html" class="button">View Post</a></li>
 									</ul>
 								</article>
 
