Update posts.html file

--- a/posts.html
+++ b/posts.html
@@ -90,12 +90,12 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>A group project by students of the 2022 Erasmus Masters in Geospatial Technologies, Universitat Jaume I.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="the-un-mappers-streetlights-mapping.html" class="button">View Post</a></li>
 									</ul>
 								</article>
 
 
-								<article>
+								<!-- <article>
 									<header>
 										 
 										<h2><a href="#">Excel Projects</a></h2>
@@ -130,7 +130,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">View Projects</a></li>
 									</ul>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Footer -->
