posts.html updates

--- a/the-castellon-tourist-service-fascilities-program.html
+++ b/the-castellon-tourist-service-fascilities-program.html
@@ -35,9 +35,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html"> Projects</a></li>
-							<li class="active"><a href="posts.html">Posts</a></li>
 							<li class="active"><a href="recent-posts.html">Recent posts</a></li>
-							<li><a href="previous-posts.html">Previous posts</a></li>
+							<li><a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html">Previous posts</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/oeadefisan" class="icon brands fa-linkedin"><span class="label">linkedin<span></a></li>
@@ -56,7 +55,7 @@
 									<span class="date">March 24, 2023</span>
 									<h1>The Castellon<br />
 									Tourist Service Facilities Program</h1>
-									<p>A proposed project for the Castellon Tourism Agency (CTA).<br /><b>Proposed by:</b><br />Erasmus MSc Geospatial Technologies | Universitat Jaume I, Castellon de la plana, Spain.<br /> <br /><b>Designed by:</b> Oluwatobi Ezekiel Adefisan&emsp;      
+									<p>A proposed project for the Castellon Tourism Agency (CTA).<br /><b>Proposed by:</b> Erasmus MSc Geospatial Technologies | Universitat Jaume I, Castellon de la plana, Spain.<br /><b>Designed by:</b> Oluwatobi Ezekiel Adefisan&emsp;      
 									<b>Student ID:</b> al426468 
 									</p>
 								</header>
