--- a/the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html
+++ b/the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html
@@ -35,8 +35,9 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html"> Projects</a></li>
-							<li><a href="recent-posts.html">Recent posts</a></li>
-							<li class="active"><a href="previous-posts.html">Previous posts</a></li>
+							<li><a href="posts.html">Posts</a></li>
+							<li><a href="the-castellon-tourist-service-fascilities-program.html">Recent posts</a></li>
+							<li class="active"><a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html">Previous posts</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/oeadefisan" class="icon brands fa-linkedin"><span class="label">linkedin<span></a></li>
