Changed titled from UN Mappers to UN Maps

--- a/posts.html
+++ b/posts.html
@@ -87,7 +87,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">UN Mappers: Campus Streetlight Mapping of Universitat Jaume I</a></h2>
+										<h2><a href="#">UN Maps: Campus Streetlight Mapping of Universitat Jaume I</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/uji-openstreet-mappers.jpg" alt="" /></a>
 									<p style="text-align: center;">A group project by students of the 2022 Erasmus Masters in Geospatial Technologies, Universitat Jaume I.<br/><span class="date">- January 28, 2023 -</span></p>
