--- a/the-castellon-tourist-service-fascilities-program.html
+++ b/the-castellon-tourist-service-fascilities-program.html
@@ -149,8 +149,8 @@
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
+									<a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html">2</a>
+									<a href="the-un-maps-streetlights-mapping.html" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="next">Next</a>
 								</div>
