--- a/the-un-maps-streetlights-mapping.html
+++ b/the-un-maps-streetlights-mapping.html
@@ -150,9 +150,9 @@
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
+									<a href="the-castellon-tourist-service-fascilities-program.html" class="page">1</a>
+									<a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html" class="page">2</a>
+									<a href="the-un-maps-streetlights-mapping.html" class="page active">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="next">Next</a>
 								</div>
