Update broken image links

--- a/the-castellon-tourist-service-fascilities-program.html
+++ b/the-castellon-tourist-service-fascilities-program.html
@@ -131,11 +131,11 @@
 											<div class="col-6">
 												<span class="image fit">
 													<figure>
-														<img src="/images/tourist-service-fascilities-survey.jpg" />
+														<img src="images/tourist-service-fascilities-survey.jpg" />
 														<figcaption style="text-align: left;">Figure 5: The Tourist Service Facilities Tool.</figcaption>
 													</figure>	
 													<ul class="actions" style="display: flex; justify-content: right;">
-														<li><a href="https://survey123.arcgis.com/share/2cd05a5cff1e496683188b6f0f55ed99?portalUrl=https://uji.maps.arcgis.com" class="button icon solid fa-download">Download Tool</a></li>
+														<li><a href="https://survey123.arcgis.com/share/2cd05a5cff1e496683188b6f0f55ed99?portalUrl=https://uji.maps.arcgis.com" class="button icon solid fa-download">Download</a></li>
 													</ul>
 												</span>
 											</div>
