--- a/podcast.html
+++ b/podcast.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Data Analytics Podcast by Oluwatobi Adefisan
+	Geospatial Data Analytics Podcast by Oluwatobi Adefisan
 	fizgeospatial.com | @fisanUJI
 -->
 <html>
 	<head>
-		<title>Oluwatobi Data Analyst Podcast</title>
+		<title>Oluwatobi Geospatial Data Analyst Blogpost</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
