--- a/posts.html
+++ b/posts.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Data Analytics Portfolio by Oluwatobi Adefisan
+	Geospatial Data Analytics Portfolio by Oluwatobi Adefisan
 	fizgeospatial.com | @fisanUJI
 -->
 <html>
 	<head>
-		<title>Oluwatobi Data Analyst Portfolio</title>
+		<title>Oluwatobi Geospatial Data Analyst Blogpost</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -72,12 +72,12 @@
                                 <article>
 									<header>
 										
-										<h2><a href="the-un-maps-streetlights-mapping.html">UN Maps: Campus Streetlight Mapping of Universitat Jaume I</a></h2>
+										<h2><a href="#">UN Maps: Campus Streetlight Mapping of Universitat Jaume I</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/uji-openstreet-mappers.jpg" alt="" /></a>
 									<p style="text-align: center;">A group project by students of the 2022 Erasmus Masters in Geospatial Technologies, Universitat Jaume I.<br/><span class="date">- January 28, 2023 -</span></p>
 									<ul class="actions special">
-										<li><a href="the-un-maps-streetlights-mapping.html" class="button">View Post</a></li>
+										<li><a href="#" class="button">View Post</a></li>
 									</ul>
 								</article>
 
@@ -139,7 +139,7 @@
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="the-castellon-tourist-service-fascilities-program.html" class="page">1</a>
 									<a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html" class="page">2</a>
-									<a href="the-un-maps-streetlights-mapping.html" class="page">3</a>
+									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="next">Next</a>
 								</div>
