--- a/the-castellon-tourist-service-fascilities-program.html
+++ b/the-castellon-tourist-service-fascilities-program.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Data Analytics Blog post by Oluwatobi Adefisan
+	Geospatial Data Analytics Blog post by Oluwatobi Adefisan
 	fizgeospatial.com | @fisanUJI
 -->
 <html>
 	<head>
-		<title>Oluwatobi Data Analyst Blogpost</title>
+		<title>Oluwatobi Geospatial Data Analyst Blogpost</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html"> Projects</a></li>
-							<li class="active"><a href="recent-posts.html">Recent posts</a></li>
+							<li class="active"><a href="the-castellon-tourist-service-fascilities-program.html">Recent posts</a></li>
 							<li><a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html">Previous posts</a></li>
 						</ul>
 						<ul class="icons">
@@ -150,7 +150,7 @@
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
 									<a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html">2</a>
-									<a href="the-un-maps-streetlights-mapping.html" class="page">3</a>
+									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="next">Next</a>
 								</div>
