--- a/the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html
+++ b/the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Data Analytics Blog post by Oluwatobi Adefisan
+	Geospatial Data Analytics Blog post by Oluwatobi Adefisan
 	fizgeospatial.com | @fisanUJI
 -->
 <html>
 	<head>
-		<title>Oluwatobi Data Analyst Blogpost</title>
+		<title>Oluwatobi Geospatial Data Analyst Blogpost</title>
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -150,7 +150,7 @@
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="the-castellon-tourist-service-fascilities-program.html" class="page">1</a>
 									<a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html" class="page active">2</a>
-									<a href="the-un-maps-streetlights-mapping.html" class="page">3</a>
+									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="next">Next</a>
 								</div>
