--- a/posts.html
+++ b/posts.html
@@ -76,7 +76,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/lokoja-2022-flooding-aerial-photo.jpg" alt="" /></a>
 									<p style="text-align: center;">A group project by students of the 2022 Erasmus Masters in Geospatial Technologies, Universitat Jaume I.
-                                        <br /><span class="date">- November 4, 2022 -</span>
+                                        <br /><br /><span class="date">- November 4, 2022 -</span>
                                     </p>
 									<ul class="actions special">
 										<li><a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html" class="button">View Post</a></li>
