Update the posts.html file

--- a/posts.html
+++ b/posts.html
@@ -59,7 +59,8 @@
 								<header class="major">
 									
 									<h2><a href="the-castellon-tourist-service-fascilities-program.html">The Castellon Tourist Service Facilities Program<br /></a></h2>
-									<p>A proposed project for the Castellon Tourism Agency (CTA).<br /><span class="date">- March 24, 2023 - </span></p>
+									<p>A proposed project for the Castellon Tourism Agency (CTA).
+										<br /><br /><span class="date">- March 24, 2023 - </span></p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
