--- a/posts.html
+++ b/posts.html
@@ -60,7 +60,8 @@
 									
 									<h2><a href="the-castellon-tourist-service-fascilities-program.html">The Castellon Tourist Service Facilities Program<br /></a></h2>
 									<p>A proposed project for the Castellon Tourism Agency (CTA).
-										<br /><br /><span class="date">- March 24, 2023 - </span></p>
+										<br /><br /><span class="date"> - March 24, 2023 - </span>
+									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -77,7 +78,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/lokoja-2022-flooding-aerial-photo.jpg" alt="" /></a>
 									<p style="text-align: center;">A group project by students of the 2022 Erasmus Masters in Geospatial Technologies, Universitat Jaume I.
-                                        <br /><br /><span class="date">- November 4, 2022 -</span>
+                                        <br /><span class="date">- November 4, 2022 -</span>
                                     </p>
 									<ul class="actions special">
 										<li><a href="the-flood-susceptibility-mapping-of-lokoja-nigeria-2022.html" class="button">View Post</a></li>
