--- a/index.html
+++ b/index.html
@@ -58,10 +58,20 @@
 										
 										<h2><a href="https://app.powerbi.com/groups/me/list?experience=power-bi">Microsoft Power BI Projects</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/parking_review_dashboard.jpg" alt="" /></a>
+									<!-- <a href="#" class="image fit"><img src="images/parking_review_dashboard.jpg" alt="" /></a> -->
+									
+									<!-- Embed Power BI Report -->
+									<iframe> 
+										title="My Parking Report" 
+										width="100%" 
+										height="541.25" 
+									    id=22426826-dc4c-401a-8d0e-7f97e64c0f99
+									</iframe> 
+
 									<p>Repository for all Microsoft Power BI projects.</p>
 									<ul class="actions special">
-										<li><a href="https://app.powerbi.com/groups/me/list?experience=power-bi" class="button">View Projects</a></li>
+										<li><a href="https://app.powerbi.com/reportEmbed?reportId=3216979e-14cf-491d-af48-6e65cca56096&autoAuth=true26826-dc4c-401a-8d0e-7f97e64c0f99View Fullscreen">View Projects</a>
+										</li>
 									</ul>
 							</article>
 
