--- a/powerbi.html
+++ b/powerbi.html
@@ -68,7 +68,7 @@
 							</article>
 
                             <article class = "post featured">
-									<a href="#" class="image fit"><img src="images/" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/student_loan_dashboard.jpg" alt="" /></a>
 									<h3 style="text-align: center;">School Library Project</h3>
 									<ul class="actions special">
 										<li><a href="https://app.powerbi.com/reportEmbed?reportId=bc991db1-1c08-4d2e-92ac-5ff9b84f2a82&autoAuth=true&ctid=22426826-dc4c-401a-8d0e-7f97e64c0f99" class="button">View Projects</a>
