--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<a href="#" class="image fit"><img src="images/parking_review_dashboard.jpg" alt="" /></a>
 									<p style="text-align: center;">Repository for all Microsoft Power BI projects and reports.</p>
 									<ul class="actions special">
-										<li><a href="https://app.powerbi.com/reportEmbed?reportId=3216979e-14cf-491d-af48-6e65cca56096&autoAuth=true&ctid=22426826-dc4c-401a-8d0e-7f97e64c0f99" class="button">View Projects</a>
+										<li><a href="powerbi.html" class="button">View Projects</a>
 										</li>
 									</ul>
 							</article>
