--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@
 						<ul class="links">
 							<li class="active"><a href="index.html"> Projects</a></li>
 							<li><a href="posts.html">Posts</a></li>
-							<!-- 
-							<li><a href="posts.html">Posts</a></li>
-							<li><a href="podcast.html">Podcast</a></li>
-							-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/oeadefisan" class="icon brands fa-linkedin"><span class="label">linkedin<span></a></li>
@@ -65,21 +61,6 @@
 										</li>
 									</ul>
 							</article>
-
-
-
-						<!-- Posts -->
-							<!-- <article>
-								<header>
-									
-									<h2><a href="#">Data Cleaning in SQL<br /></a></h2>
-									<p>In this project I cleaned housing data in SQL Server<br /></p>
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
-								</ul>
-							</article> -->
 
 							<section class="posts">
 								<!-- <article>
@@ -138,7 +119,6 @@
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -152,7 +132,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -170,7 +150,9 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> -->
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd2Ke1mJ54fjp8ixoGpnYqrA4X_tLXaKyNOGny1NkP0-bNWCQ/viewform?embedded=true" width="640" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
 						</section>
 
 						<!-- Contact -->
