Update all form sections

--- a/powerbi.html
+++ b/powerbi.html
@@ -76,27 +76,9 @@
 									</ul>
 							</article>
 
-						<!-- Posts -->
-							<!-- <section class="posts">
-								<article>
-									<header>
-										
-										<h2><a href="#">Project Title</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Short description of the project.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-
-								
-							</section> -->
-
-						<!-- Footer -->
+					<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -110,25 +92,9 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd2Ke1mJ54fjp8ixoGpnYqrA4X_tLXaKyNOGny1NkP0-bNWCQ/viewform?embedded=true" width="640" height="750" frameborder="0" marginheight="0" marginwidth="0">
+								Loading…
+							</iframe>
 						</section>
 
 						<!-- Contact -->
