update posts.html file

--- a/posts.html
+++ b/posts.html
@@ -117,7 +117,7 @@
 									<a href="#" class="image fit"><img src="images/uji-openstreet-mappers.jpg" alt="" /></a>
 									<p style="text-align: center;">A group project by students of the 2022 Erasmus Masters in Geospatial Technologies, Universitat Jaume I.<br/><span class="date">- January 28, 2023 -</span></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Post</a></li>
+										<li><a href="https://maps.un.org/news/mapping-streetlights-open-data-approach-analyze-campus-safety" class="button">View Post</a></li>
 									</ul>
 								</article>
 							</section>
