--- a/posts.html
+++ b/posts.html
@@ -90,7 +90,7 @@
 										
 										<h2><a href="#">The 15th Geomundus Conference</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/geomundus_conference_nigeria_rwanda_set_2022-2023_sets.jpg" alt="" /></a>
 									<p style="text-align: center;">A conference organized and facilitated by the students of the Erasmus Master's of Science in Geospatial Technologies class of 2022, featuring keynote speakers like Dr. Qiusheng Wu, Prof. Andy Nelson, Alda Monfort, and Maria Arias.<br/><span class="date">- October 20 -21, 2023 -</span></p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Post</a></li>
@@ -100,7 +100,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">The Renaturation of Ai River using Unmanned Aerial Systems (UAS) with RGB, Lidar Sensor, and the Sensebox microcontroller</a></h2>
+										<h2><a href="#">The Renaturation of Ai River using UAVs with RGB, Lidar Sensor, and the Sensebox microcontroller</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 									<p style="text-align: center;">A spatio-temporal analysis of the renaturation of River Ai against flooding activities using UAV.<br/><span class="date">- July 5, 2023 -</span></p>
