--- a/posts.html
+++ b/posts.html
@@ -91,7 +91,7 @@
 										<h2><a href="#">The 15th Geomundus Conference</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/geomundus_conference_nigeria_rwanda_set_2022-2023_sets.jpg" alt="" /></a>
-									<p style="text-align: center;">A conference organized and facilitated by the students of the Erasmus Master's of Science in Geospatial Technologies class of 2022, featuring keynote speakers like Dr. Qiusheng Wu, Prof. Andy Nelson, Alda Monfort, and Maria Arias.<br/><span class="date">- October 20 -21, 2023 -</span></p>
+									<p style="text-align: center;">A conference organized and facilitated by the students of the Erasmus Master's of Science in Geospatial Technologies class of 2022, featuring keynote speakers like Dr. Qiusheng Wu, and Prof. Andy Nelson.<br/><span class="date">- October 20 -21, 2023 -</span></p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Post</a></li>
 									</ul>
