--- a/posts.html
+++ b/posts.html
@@ -63,7 +63,7 @@
 										<br /><br /><span class="date"> - March 24, 2023 - </span>
 									</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/castelllon_tourism_registration_app.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="the-castellon-tourist-service-fascilities-program.html" class="button large">View Post</a></li>
 								</ul>
